Mon Feb 23 02:26:44 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (inspect_timeval_as_interval): renamed from
	  inspect_timeval.

Mon Feb 23 02:10:09 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (inspect_timeval): fix the size test.

Sun Feb 22 22:42:20 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (tr_trans): should recalculate coderange.
	  [ruby-core:22326] (reopened at [ruby-core:22328])

Sun Feb 22 20:09:29 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (inspect_linger): message refined.

Sun Feb 22 19:28:08 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/init.c (s_recvfrom): use rb_io_wait_readable after
	  recvfrom.

Sun Feb 22 18:40:04 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (inspect_errno): new function.
	  (sockopt_inspect): use inspect_errno for SO_ERROR.

Sun Feb 22 15:11:51 2009  Tanaka Akira  <akr@fsij.org>

	* re.c (Init_Regexp): define Regexp::FIXEDENCODING.  [ruby-dev:38066]

Sun Feb 22 14:33:06 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (tr_trans): should not be affected by the encoding of
	  replacement unless actually modified.  [ruby-talk:328967]
	  [ruby-core:22326]

Sun Feb 22 13:38:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/init.c (s_recvfrom_nonblock): handles EAGAIN too.

	* ext/socket/init.c (s_accept_nonblock): ditto, and EPROTO depends
	  on platforms.

Sun Feb 22 13:03:12 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* eval.c (ruby_options): the evaluater now expects iseq instead of tree.

	* ruby.c (ruby_process_options): ditto.

Sun Feb 22 13:03:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (configure): unset PWD to use symlink to building
	  directory.

	* Makefile.in (up): cd doesn't need LC_TIME, VCS needs.

Sun Feb 22 10:43:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (method_missing): should not pop cfp if missing method
	  is method_missing.  [ruby-core:22298]
